Fixed the link colors. Updated the button order inside all modals. Added consistant whitespace between the forms and page titles. Removed all blue glow from inputs. Added the My Contacts, FAQ and About links then commented them out for now. Style changes account convos home and invites components as well as the MenuContainer component.

--- a/public/css/sb-admin.css
+++ b/public/css/sb-admin.css
@@ -31,19 +31,49 @@ th {
   min-width: 120px;
 }
 
-input[type="text"], input[type="password"], input[type="radio"], input[type="text"]:disabled, textarea {
+textarea,
+select,
+input,
+button,
+input[type="text"],
+input[type="password"],
+input[type="radio"],
+input[type="text"]:disabled,
+textarea {
   outline: none;
+  border: 1px solid #ccc !important;
   -webkit-box-shadow: none !important;
   box-shadow: none !important;
-  border: 1px solid #ccc !important;
 }
 
-button, a, button.close, .btn-link {
+textarea, select, input, button {
+  outline: none;
+}
+
+textarea, select, input, button {
+  outline: 0;
+}
+
+button, button.close, .btn-link {
   color: #26313d;
   outline: none;
   -webkit-box-shadow: none !important;
   box-shadow: none !important;
   border: none !important;
+}
+
+button:hover, button.close:hover, .btn-link:hover {
+  color: #26313d;
+  text-decoration: none;
+}
+
+a {
+  color: blue;
+}
+
+a:hover {
+  color: darkblue;
+  text-decoration: none;
 }
 
 .bg-custom {
